--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* 隱藏input [type=number] 旁的上下按鈕 */
+@layer base {
+    input[type=number]::-webkit-outer-spin-button,
+    input[type=number]::-webkit-inner-spin-button {
+      @apply appearance-none;
+      margin: 0;
+    }
+  
+    input[type=number] {
+      @apply appearance-none;
+    }
+  }
